--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
             <div class="row align-items-center">
                 <div class="col-xl-5 col-md-6">
                     <div class="about_thumb">
-                        <img class="img-fluid" src="img/about/about_1.png" alt="">
+                        <img class="img-fluid" src="img/about/about_1.JPG" alt="">
                     </div>
                 </div>
                 <div class="col-xl-7 col-md-6">
                     <div class="about_info">
-                        <h3>Jack Kalib</h3>
+                        <h3>Sumit Malhotra</h3>
                         <p>Esteem spirit temper too say adieus who direct esteem. It esteems luckily or picture placing drawing. Apartments frequently or motionless on reasonable projecting expression enim ad minim veniam quis nostrud exercitation we have supported programmes to help alleviate human suffering through animal welfare when people might depend.</p>
                         <div class="signature">
                             <img src="img/about/signature.png" alt="">
@@ -164,7 +164,6 @@
         </div>
     </div>
     <!--/ about_area  -->
-
     <!-- youtube_video_area  -->
     <div class="youtube_video_area">
         <div class="container-fluid p-0">
@@ -172,7 +171,26 @@
                 <div class="col-xl-3 col-lg-3 col-md-6">
                     <div class="single_video">
                         <div class="thumb">
-                            <img src="img/video/1.png" alt="">
+                            <img src="img/video/port1.png" alt="">
+                        </div>
+                        <div class="hover_elements">
+                            <div class="video">
+                                    <a class="popup-video" href="https://youtu.be/ky9f_iyMGuA"> 
+                                            <i class="fa fa-play"></i>
+                                        </a>
+                            </div>
+
+                            <div class="hover_inner">
+                                <span></span>
+                                <h3><a href="#">Yadaan</a></h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-6">
+                    <div class="single_video">
+                        <div class="thumb">
+                            <img src="img/video/2.png" alt="">
                         </div>
                         <div class="hover_elements">
                             <div class="video">
