--- a/index.html
+++ b/index.html
@@ -189,21 +189,7 @@
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-6">
                     <div class="single_video">
-                        <div class="thumb">
-                            <img src="img/video/2.png" alt="">
-                        </div>
-                        <div class="hover_elements">
-                            <div class="video">
-                                    <a class="popup-video" href="https://www.youtube.com/watch?v=Hzmp3z6deF8"> 
-                                            <i class="fa fa-play"></i>
-                                        </a>
-                            </div>
-
-                            <div class="hover_inner">
-                                <span>New York Show-2018</span>
-                                <h3><a href="#">Shadows of My Dream</a></h3>
-                            </div>
-                        </div>
+                        <iframe width="430" height="315" src="https://www.youtube.com/embed/ky9f_iyMGuA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-6">
