--- a/index.html
+++ b/index.html
@@ -116,22 +116,22 @@
                                 <div class="col-xl-9 col-md-9">
                                     <div class="music_field">
                                             <div class="thumb">
-                                                    <img src="img/music_man/1.png" alt="">
+                                                    <img src="img/music_man/2.png" alt="">
                                                 </div>
                                                 <div class="audio_name">
                                                     <div class="name">
-                                                        <h4>Frando Kally</h4>
-                                                        <p>10 November, 2019</p>
+                                                        <h4>Yaar Da Viyah</h4>
+                                                        <p>7 May, 2019</p>
                                                     </div>
-                                                        <audio preload="auto" controls>
-                                                                <source src="https://www.w3schools.com/html/horse.mp3">
+                                                        <audio preload="auto" controls > 
+                                                                <source  src="https://www.w3schools.com/html/horse.mp3">
                                                             </audio>
                                                 </div>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-md-3">
                                     <div class="music_btn">
-                                            <a href="#" class="boxed-btn">buy albam</a>
+                                            <a href="https://gaana.com/song/yaar-da-viyah-7" class="boxed-btn">Listen Online/a>
                                     </div>
                                 </div>
                     </div>
@@ -200,7 +200,12 @@
                         <iframe width="375" height="315" src="https://www.youtube.com/embed/qqMAOSqQHpQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                    </div>
                 </div>
                 
-                
+                <div class="col-xl-3 col-lg-3 col-md-6">
+                    <div class="single_video">
+                        <a href="https://www.jiosaavn.com/song/yadaan/KF0Sax16ekQ">Link</a>
+                      </div>
+                </div>
+
             </div>
         </div>
     </div>
@@ -222,12 +227,12 @@
                                 <div class="col-xl-9 col-md-9">
                                     <div class="music_field">
                                             <div class="thumb">
-                                                    <img src="img/music_man/1.png" alt="">
+                                                    <img src="img/music_man/2.png" alt="">
                                                 </div>
                                                 <div class="audio_name">
                                                     <div class="name">
-                                                        <h4>Frando Kally</h4>
-                                                        <p>10 November, 2019</p>
+                                                        <h4>Yadaan</h4>
+                                                        <p>24 December, 2017</p>
                                                     </div>
                                                         <audio preload="auto" controls>
                                                                 <source src="https://gaana.com/artist/sumit-malhotra">
@@ -237,7 +242,7 @@
                                 </div>
                                 <div class="col-xl-3 col-md-3">
                                     <div class="music_btn">
-                                            <a href="#" class="boxed-btn">buy albam</a>
+                                            <a href="https://www.jiosaavn.com/song/yadaan/KF0Sax16ekQ" class="boxed-btn">Listen Online</a>
                                     </div>
                                 </div>
                     </div>
@@ -318,10 +323,10 @@
                     <div class="col-xl-5 col-lg-5 grid-item cat1 col-md-6">
                         <div class="single-gallery mb-30">
                                 <div class="portfolio-img">
-                                        <img src="img/gallery/1.png" alt="">
+                                        <img src="img/gallery/1.JPG" alt="">
                                 </div>
                                 <div class="gallery_hover">
-                                    <a  class="popup-image"  href="img/gallery/1.png" class="hover_inner">
+                                    <a  class="popup-image"  href="img/gallery/1.JPG" class="hover_inner">
                                         <i class="ti-plus"></i>
                                     </a>
                                 </div>
@@ -330,10 +335,10 @@
                     <div class="col-xl-7 col-lg-7 grid-item cat3 cat4 col-md-6">
                         <div class="single-gallery mb-30">
                                 <div class="portfolio-img">
-                                        <img src="img/gallery/2.png" alt="">
+                                        <img src="img/gallery/2.JPG" alt="">
                                 </div>
                                 <div class="gallery_hover">
-                                        <a class="popup-image" href="img/gallery/2.png" class="hover_inner">
+                                        <a class="popup-image" href="img/gallery/2.JPG" class="hover_inner">
                                             <i class="ti-plus"></i>
                                         </a>
                                 </div>
@@ -342,10 +347,10 @@
                     <div class="col-xl-4 col-lg-6 grid-item cat4 col-md-6">
                         <div class="single-gallery mb-30">
                                 <div class="portfolio-img">
-                                        <img src="img/gallery/3.png" alt="">
+                                        <img src="img/gallery/3.jpg" alt="">
                                 </div>
                                 <div class="gallery_hover">
-                                        <a class="popup-image" href="img/gallery/3.png" class="hover_inner">
+                                        <a class="popup-image" href="img/gallery/3.jpg" class="hover_inner">
                                             <i class="ti-plus"></i>
                                         </a>
                                 </div>
@@ -354,10 +359,10 @@
                     <div class="col-xl-4 col-lg-6 grid-item cat2 col-md-6">
                         <div class="single-gallery mb-30">
                             <div class="portfolio-img">
-                                    <img src="img/gallery/4.png" alt="">
+                                    <img src="img/gallery/4.JPG" alt="">
                             </div>
                             <div class="gallery_hover">
-                                    <a class="popup-image" href="img/gallery/4.png" class="hover_inner">
+                                    <a class="popup-image" href="img/gallery/4.JPG" class="hover_inner">
                                         <i class="ti-plus"></i>
                                     </a>
                                 </div>
@@ -366,10 +371,10 @@
                     <div class="col-xl-4 col-lg-6 grid-item cat2 col-md-6">
                         <div class="single-gallery mb-30">
                             <div class="portfolio-img">
-                                    <img src="img/gallery/5.png" alt="">
+                                    <img src="img/gallery/5.JPG" alt="">
                             </div>
                             <div class="gallery_hover">
-                                    <a class="popup-image" href="img/gallery/5.png" class="hover_inner">
+                                    <a class="popup-image" href="img/gallery/5.JPG" class="hover_inner">
                                         <i class="ti-plus"></i>
                                     </a>
                             </div>
