--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 </div>
                                 <div class="col-xl-3 col-md-3">
                                     <div class="music_btn">
-                                            <a href="https://gaana.com/song/yaar-da-viyah-7" class="boxed-btn">Listen Online/a>
+                                            <a href="https://gaana.com/song/yaar-da-viyah-7" class="boxed-btn">Listen Online</a>
                                     </div>
                                 </div>
                     </div>
