--- a/index.html
+++ b/index.html
@@ -51,20 +51,9 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li><a class="active" href="index.html">home</a></li>
-                                            <li><a href="about.html">About</a></li>
-                                            <li><a href="track.html">tracks</a></li>
-                                            <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="blog.html">blog</a></li>
-                                                    <li><a href="single-blog.html">single-blog</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                     <li><a href="elements.html">elements</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="contact.html">Contact</a></li>
+                                            <li><a href="#">About</a></li>
+                                            <li><a href="#">tracks</a></li>
+                                            <li><a href="#">Contact</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -404,18 +393,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-md-6">
-                            <div class="footer_widget">
-                                    <h3 class="footer_title">
-                                            Services
-                                    </h3>
-                                <div class="subscribe-from">
-                                        <form action="#">
-                                                <input type="text" placeholder="Enter your mail">
-                                                <button type="submit" >Subscribe</button>
-                                            </form>
-                                </div>
-                                <p class="sub_text">Esteem spirit temper too say adieus who direct esteem esteems luckily.</p>
-                                </div>
+                           
                     </div>
                     <div class="col-xl-5 col-md-5 offset-xl-1">
                         <div class="footer_widget">
@@ -423,11 +401,10 @@
                                         Contact Me
                                 </h3>
                             <ul>
-                                <li><a href="#">conbusi@support.com
+                                <li><a href="#">sumitmal12345@gmail.com
                                     </a></li>
-                                <li><a href="#">+10 873 672 6782
+                                <li><a href="#">+91 999 909 7256
                                     </a></li>
-                                <li><a href="#">600/D, Green road, Kings Garden NewYork-6732</a></li>
                             </ul>
                             <div class="socail_links">
                                 <ul>
@@ -471,7 +448,7 @@
                     <div class="col-xl-7 col-md-6">
                         <p class="copy_right">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved.
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
@@ -481,7 +458,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                                 <li><a href="#">home</a></li>
                                 <li><a href="#">about</a></li>
                                 <li><a href="#">tracks</a></li>
-                                <li><a href="#">blog</a></li>
                                 <li><a href="#">contact</a></li>
                             </ul>
                         </div>
