--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="social_icon text-right">
                                     <ul>
-                                        <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
+                                        <li><a href="https://www.facebook.com/SUMITMALHOTRAOFFICIAL/"> <i class="fa fa-facebook"></i> </a></li>
                                         <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
-                                        <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
+                                        <li><a href="https://www.instagram.com/sumitmalhotra.13/"> <i class="fa fa-instagram"></i> </a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -379,7 +379,7 @@
                 <div class="col-xl-12">
                     <div class="text text-center">
                         <h3>Contact For RSVP</h3>
-                        <a class="boxed-btn3" href="contact.html">Contact Me</a>
+                        <a class="boxed-btn3" href="#">Contact Me</a>
                     </div>
                 </div>
             </div>
@@ -409,15 +409,10 @@
                             <div class="socail_links">
                                 <ul>
                                     <li>
-                                        <a href="#">
+                                        <a href="https://www.facebook.com/SUMITMALHOTRAOFFICIAL/">
                                             <i class=" fa fa-facebook "></i>
                                         </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="fa fa-google-plus"></i>
-                                        </a>
-                                    </li>
+                                    </li>                                   
                                     <li>
                                         <a href="#">
                                             <i class="fa fa-twitter"></i>
@@ -429,7 +424,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="https://www.instagram.com/sumitmalhotra.13/">
                                             <i class="fa fa-instagram"></i>
                                         </a>
                                     </li>
