--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <div class="social_icon text-right">
                                     <ul>
                                         <li><a href="https://www.facebook.com/SUMITMALHOTRAOFFICIAL/"> <i class="fa fa-facebook"></i> </a></li>
-                                        <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
+                                        <li><a href="https://twitter.com/sumitbaba8"> <i class="fa fa-twitter"></i> </a></li>
                                         <li><a href="https://www.instagram.com/sumitmalhotra.13/"> <i class="fa fa-instagram"></i> </a></li>
                                     </ul>
                                 </div>
@@ -414,12 +414,12 @@
                                         </a>
                                     </li>                                   
                                     <li>
-                                        <a href="#">
+                                        <a href="https://twitter.com/sumitbaba8">
                                             <i class="fa fa-twitter"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="https://www.youtube.com/user/Sumitbaba19">
                                             <i class="fa fa-youtube-play"></i>
                                         </a>
                                     </li>
