--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                 </div>
                                 <div class="col-xl-3 col-md-3">
                                     <div class="music_btn">
-                                            <a href="https://gaana.com/song/yaar-da-viyah-7" class="boxed-btn">Listen Online</a>
+                                            <a href="#" class="boxed-btn">Listen Online</a>
                                     </div>
                                 </div>
                     </div>
@@ -222,7 +222,7 @@
                                                         <p>24 December, 2017</p>
                                                     </div>
                                                         <audio preload="auto" controls>
-                                                                <source src="https://gaana.com/artist/sumit-malhotra">
+                                                                <source src="#">
                                                             </audio>
                                                 </div>
                                     </div>
