--- a/index.html
+++ b/index.html
@@ -203,8 +203,7 @@
 
 
      <!-- youtube_video_area  cover songs-->
-    <br>
-    <br>
+
      <div class="youtube_video_area">
         <div class="container-fluid p-0">
             <div class="row">
@@ -343,6 +342,29 @@
     </div>
     <!-- music_area end  -->
 
+     <!-- about_area production -->
+    <div class="about_area">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-xl-5 col-md-6">
+                    <div class="about_thumb">
+                        <img class="img-fluid" src="img/about/aboutProd.JPG" alt="">
+                    </div>
+                </div>
+                <div class="col-xl-7 col-md-6">
+                    <div class="about_info">
+                        <h3>Malhotra Production</h3>
+                        <p>Malhotra Productions Studios is Delhi’s premiere audio recording studio and post productions facility. Our aim is to create high quality digital recordings in quality with all styles of music and at any level of development.  If you are a singer or songwriter planning to develop your ideas, we can record, mix and master right here. We have all the latest gadgets and equipments to make your recordings sound truly professional. We also conduct voice-over recordings .</p>
+                        <div class="signature">
+                            <img src="img/about/signature.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--/ about_area production -->
+    
     <!-- gallery -->
     <div class="gallery_area">
         <div class="container">
