--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
                 <div class="col-xl-7 col-md-6">
                     <div class="about_info">
                         <h3>Sumit Malhotra</h3>
-                        <p>Esteem spirit temper too say adieus who direct esteem. It esteems luckily or picture placing drawing. Apartments frequently or motionless on reasonable projecting expression enim ad minim veniam quis nostrud exercitation we have supported programmes to help alleviate human suffering through animal welfare when people might depend.</p>
+                        <p>Singer. Performer. Entertainer. Just some of the words that describe Sumit Malhotra, a seasoned singer based in Delhi, India. With multiple live shows in India and abroad to his credit, Sumit Malhotra is a highly sought after artiste. He is known for his natural ability to connect with the audience with his unparalleled energy, performance and gifted voice.
+                            Thanks to his deep inclination towards music clubbed with inherent talent, Sumit Malhotra started live performing at an early age and was privileged enough to sing at prestigious platforms. He has been a part of several Delhi Haat shows. While mainly known and loved for his singing performances, Sumit Malhotra's talents are not restricted to just singing. He plays the Guitar,Harmonium. 
+                            Wherever he goes, he thrills audiences with his inimitable style. He is available for live shows/collaborations. Reach out to him on +919999097256</p>
                         <div class="signature">
                             <img src="img/about/signature.png" alt="">
                         </div>
