--- a/index.html
+++ b/index.html
@@ -310,7 +310,34 @@
         </div>
     </div>
     <!--/ about_area production -->
-    
+
+       <!-- youtube_video_area  studio songs-->
+
+       <div class="youtube_video_area">
+        <div class="container-fluid p-0">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="section_title text-center mb-65">
+                        <h3>Studio Glimpses</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row no-gutters">
+               
+                <div class="col-xl-3 col-lg-3 col-md-6">
+                    <div class="single_video">
+                        <iframe width="375" height="315" src="https://www.youtube.com/embed/xk8uPyzFyDs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-6">
+                    <div class="single_video">
+                        <iframe width="375" height="315" src="https://www.youtube.com/embed/AFVbchVZxLs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- / youtube_video_area studio songs -->
     <!-- gallery -->
     <div class="gallery_area">
         <div class="container">
