--- a/index.html
+++ b/index.html
@@ -337,6 +337,76 @@
         </div>
     </div>
     <!-- / youtube_video_area studio songs -->
+
+
+      <!-- youtube_video_area  live songs-->
+
+      <div class="youtube_video_area">
+        <div class="container-fluid p-0">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="section_title text-center mb-65">
+                        <h3>Live Shows</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row ">
+               
+                <div class="col-xl-3 col-lg-3 col-md-6">
+                    <div class="single_video">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/CWWdzvavnD8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-6">
+                    <div class="single_video">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/yRUyohjtc6U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-6">
+                    <div class="single_video">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/GguBbH_uHE4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- / youtube_video_area live songs -->
+
+
+     <!-- youtube_video_area  media -->
+
+     <div class="youtube_video_area">
+        <div class="container-fluid p-0">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="section_title text-center mb-65">
+                        <h3>Media</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row ">
+               
+                <div class="col-xl-3 col-lg-3 col-md-6">
+                    <div class="single_video">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/kKM2qOnujEs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-6">
+                    <div class="single_video">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/nW9vlP_GPWg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-6">
+                    <div class="single_video">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/BDPDc_NIyv4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- / youtube_video_area media  -->
+
+
     <!-- gallery -->
     <div class="gallery_area">
         <div class="container">
