--- a/index.html
+++ b/index.html
@@ -423,6 +423,18 @@
                 </div>
             </div>
             <div class="row grid">
+                <div class="col-xl-5 col-lg-5 grid-item cat1 col-md-6">
+                    <div class="single-gallery mb-30">
+                            <div class="portfolio-img">
+                                    <img src="img/gallery/ssstudio.JPG" alt="">
+                            </div>
+                            <div class="gallery_hover">
+                                <a  class="popup-image"  href="img/gallery/ssstudio.JPG" class="hover_inner">
+                                    <i class="ti-plus"></i>
+                                </a>
+                            </div>
+                    </div>
+                </div>
                     <div class="col-xl-5 col-lg-5 grid-item cat1 col-md-6">
                         <div class="single-gallery mb-30">
                                 <div class="portfolio-img">
