--- a/index.html
+++ b/index.html
@@ -150,6 +150,19 @@
             </div>
         </div>
     </div>
+
+    <div class="slider_area fade">
+        <div class="single_slider  d-flex align-items-center slider_bg_4 overlay2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12">
+                        <div class="slider_text text-center ">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- slider_area_end -->
 
 
