--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
             </div>
         </div>
     </div>
+
     <div class="slider_area fade">
         <div class="single_slider  d-flex align-items-center slider_bg_2 overlay2">
             <div class="container">
@@ -137,7 +138,6 @@
             </div>
         </div>
     </div>
-    
     <div class="slider_area fade">
         <div class="single_slider  d-flex align-items-center slider_bg_3 overlay2">
             <div class="container">
@@ -153,6 +153,19 @@
 
     <div class="slider_area fade">
         <div class="single_slider  d-flex align-items-center slider_bg_4 overlay2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12">
+                        <div class="slider_text text-center ">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="slider_area fade">
+        <div class="single_slider  d-flex align-items-center slider_bg_5 overlay2">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12">
